@@ -384,9 +384,9 @@ IF (COMPILING_ALL_YARP)
    ENDIF (CREATE_DEVICE_LIBRARY_MODULES)
    TARGET_LINK_LIBRARIES(harness_${postfix} YARP_dev ${YARP_EXTMOD_TARGETS} ${YARP_dev_EXT_LIBS} ${ACE_LINK_FLAGS} YARP_sig YARP_OS)
    GET_TARGET_PROPERTY(EXEC harness_${postfix} LOCATION)
-   IF(WIN32 AND NOT CYGWIN)
+   IF(MSVC)
        SET_TARGET_PROPERTIES(harness_${postfix} PROPERTIES COMPILE_FLAGS /wd4996)
-   ENDIF(WIN32 AND NOT CYGWIN)
+   ENDIF(MSVC)
 
   # add in standard tests
   FOREACH(X ${harnesscode})
@@ -425,6 +425,6 @@ ENDIF (NOT COMPILING_ALL_YARP)
 #MESSAGE(STATUS "External modules: generated list of libs" "${YARP_EXTMOD_LIBS}")
 #MESSAGE(STATUS "YARP_dev_EXT_LIBS: " "${YARP_dev_EXT_LIBS}")
 
-IF(WIN32 AND NOT CYGWIN)
+IF(MSVC)
     SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS /wd4996)
-ENDIF(WIN32 AND NOT CYGWIN)
+ENDIF(MSVC)
