@@ -54,9 +54,9 @@ AUX_SOURCE_DIRECTORY(harness harnesscode)
 ADD_EXECUTABLE(harness_${postfix} ${harnesscode})
 
 TARGET_LINK_LIBRARIES(harness_${postfix} ${name} ${NEED_LIBS} ${ACE_LINK_FLAGS})
-IF(WIN32 AND NOT CYGWIN)
+IF(MSVC)
     SET_TARGET_PROPERTIES(harness_${postfix} PROPERTIES COMPILE_FLAGS /wd4996)
-ENDIF(WIN32 AND NOT CYGWIN)
+ENDIF(MSVC)
 
 GET_TARGET_PROPERTY(EXEC harness_${postfix} LOCATION)
 
@@ -77,9 +77,9 @@ FILE(GLOB header_2 include/yarp/${postfix}/*.h)
 INSTALL_FILES(/include/yarp/${postfix} FILES ${header_2})
 
 # disable a set of warnings due to use of deprecated features/libs.
-IF(WIN32 AND NOT CYGWIN)
+IF(MSVC)
     SET_TARGET_PROPERTIES(${name} PROPERTIES COMPILE_FLAGS /wd4996)
-ENDIF(WIN32 AND NOT CYGWIN)
+ENDIF(MSVC)
 
 ENDMACRO(YarpLibrary)
 
